--- a/miniprogram/components/message-box/message-box.wxml
+++ b/miniprogram/components/message-box/message-box.wxml
@@ -1,6 +1,6 @@
 <!-- 这是自定义组件的内部WXML结构 -->
 <block wx:if="{{type=='text'}}">
-  <view class='new_txt {{sender? "request-text":""}}' style="white-space: pre-wrap">{{text}}</view>
+  <view class='new_txt {{sender? "request-text":"response-text"}}' style="white-space: pre-wrap">{{text}}</view>
 </block>
 <block wx:if="{{type=='richtext'}}">
   <view class='new_rich_txt '>
