--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,7 @@
 <!--index.wxml-->
 <view class="container">
-  <image bindtap="bindViewTap" class="rr-avatar" src="./images/logo.png" mode="cover"></image>
+  <!-- <canvas id="lottie_demo" type="2d" class="rr-avatar" bindtap="bindViewTap" /> -->
+  <image bindtap="bindViewTap" class="rr-avatar" src="../../images/logo.png" mode="cover"></image>
   <view class="top-title">您好,我是软软AI智能机器人,你可以叫我“软软”</view>
   <text class="hi_text0">我在以下方面帮到您：</text>
   <text class="hi_text">写代码</text>
@@ -16,7 +17,7 @@
     <view class="entry-button">
       <view class="bg">
       </view>
-      <image class="img" src="./images/start.png"></image>
+      <image class="img" src="../../images/start.png"></image>
     </view>
   </view>
 </view>
