--- a/miniprogram/pages/ai/ai.wxss
+++ b/miniprogram/pages/ai/ai.wxss
@@ -1,5 +1,5 @@
 /**ai.wxss**/
-.page {
+page {
   width: 100%;
   height: 100%;
   background-color: #F5F5F5;
@@ -14,27 +14,38 @@
 }
 
 .container-ai .title {
-  font-size: 28rpx;
+  font-size: 30rpx;
   text-align: center;
   width: 100%;
-  margin-top: 60rpx;
+  margin-top: 10rpx;
+  line-height: 80rpx;
   color: #474747;
+  font-size: 500;
 }
 
 .container-ai .brain-list {
+  background-color: #FFFFFF;
   padding: 20rpx 20rpx;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+
 }
 
 .container-ai .brain-item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding: 20rpx;
+  padding: 10rpx;
+  margin: 10rpx 20rpx;
+  box-sizing: border-box;
+}
+
+.container-ai .brain-item.selected {
+  border: 4rpx solid #499CFB;
+  border-radius: 16rpx;
 }
 
 .container-ai .brain-item-title {
@@ -45,6 +56,24 @@
 }
 
 .container-ai .brain-item-icon {
-  width: 200rpx;
-  height: 200rpx;
+  width: 160rpx;
+  height: 160rpx;
+}
+
+.container-ai .brain-item-current {
+  background-color: #CBE4FF;
+  color: #0062DB;
+  width: 100rpx;
+  height: 50rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14rpx;
+  font-weight: 500;
+  font-size: 24rpx;
+}
+
+.container-ai .brain-item-switch {
+  background-color: #A7E9BB;
+  color: #0062DB;
 }
