--- a/miniprogram/pkg_rr/pages/image-edit/image-edit.wxml
+++ b/miniprogram/pkg_rr/pages/image-edit/image-edit.wxml
@@ -1,6 +1,9 @@
 <!--pkg_rr/pages/image-edit/image-edit.wxml-->
 <!-- <c-bar id="c-bar" title="{{title}}" showBack="true" showHome="true"></c-bar> -->
 <view class="container-image-edit" style="{{mainHeight}}">
+  <!-- <view class="title">
+    <image src="../../../images/hj.png"></image>图片编辑
+  </view> -->
   <view class="form">
     <!-- 选择图片 -->
     <view class="form-item recovery_other_line">
@@ -37,7 +40,7 @@
   <!-- 图片显示 -->
   <view class="result-box" wx:if="{{resultList.length}}">
     <view class="result-tip">
-      以下是生成图片
+      以下是生成图片<text style="color: red;">(注:如有需要点击图片后长按保存)</text>
     </view>
     <view class="result-list">
       <view wx:for="{{resultList}}" wx:key="index" class="result-item">
