--- a/miniprogram/pkg_rr/pages/image-edit/image-edit.wxss
+++ b/miniprogram/pkg_rr/pages/image-edit/image-edit.wxss
@@ -20,6 +20,15 @@ page {
   box-sizing: border-box;
 }
 
+.container-image-edit .title {
+  text-align: left;
+}
+
+.container-image-edit .title image {
+  width: 40rpx;
+  height: 40rpx;
+}
+
 .iconf {
   font-family: "iconfont" !important;
   font-size: inherit;
