--- a/miniprogram/pkg_prompts/pages/prompts/prompts.wxml
+++ b/miniprogram/pkg_prompts/pages/prompts/prompts.wxml
@@ -30,9 +30,11 @@
     <!-- 加载更多组件 -->
     <loadmore slot="loadmore" status="{{loadMoreSetting.status}}" loading="{{loadMoreSetting.loading}}" noMore="{{loadMoreSetting.noMore}}" more="{{loadMoreSetting.more}}" />
     <!-- 加载更多组件 -->
-    <!-- 空列表组件 -->
-    <empty slot="empty" img-class="empty-img" text-class="empty-text" emptyText="{{emptySetting.text}}" emptyImg="{{emptySetting.img}}" style="background-color: #fff;" />
-    <!-- 空列表组件 -->
+    <block wx:if="{{list.length == 0}}">
+      <!-- 空列表组件 -->
+      <empty slot="empty" img-class="empty-img" text-class="empty-text" emptyText="{{emptySetting.text}}" emptyImg="{{emptySetting.img}}" style="background-color: #fff;" />
+      <!-- 空列表组件 -->
+    </block>
   </scroller>
   <handtip top="下拉刷新" bottom="上拉加载" left="滑动切换分类" right="滑动切换分类" opacity="0.7" key="hand1" />
 </view>
